--- a/Public/aboutus.html
+++ b/Public/aboutus.html
@@ -108,7 +108,7 @@
             <img src="../drawable/logo.png" alt="Bottle Cycle Logo" class="logo">
             <div class="brand-info">
                 <h1>BOTTLE CYCLE</h1>
-                <p>Smart Bottle Bin</p>
+                <p>Smart Plastic Bottle Bin</p>
             </div>
         </div>
         <nav>
