--- a/Public/index.html
+++ b/Public/index.html
@@ -6,8 +6,14 @@
     <link rel="shortcut icon" type="x-icon" href="../drawable/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bottle Cycle</title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <style>
+         body {
+            font-family: 'Arial', sans-serif;
+            background: url('../drawable/webbackground.jpg') no-repeat center center fixed;
+            background-size: cover;
+            color: #000;
+        }
         /* Style for falling leaves */
         .leaf {
             position: fixed;
