--- a/Users/reports.html
+++ b/Users/reports.html
@@ -23,7 +23,7 @@
                 <img src="logo.png" alt="Bottle Cycle Logo" class="logo">
                 <div class="brand-info">
                     <h1>BOTTLE CYCLE</h1>
-                    <p>Smart Arduino Based Plastic Bottle Bin</p>
+                    <p>Smart Plastic Bottle Bin</p>
                 </div>
             </div>
             <nav>
