--- a/Users/bottlebins.html
+++ b/Users/bottlebins.html
@@ -383,30 +383,107 @@ h2 {
     80% { opacity: 1; }
     100% { opacity: 0; }
 }
-img{
-    height: 80px;
-    width: 80px;
-}
-.bin-container
-{
-   float: left;
-   
-}
-/* Style for .bin-container to align items horizontally */
+/* Fixed size for bin items */
 .bin-container {
     display: flex;
-    flex-wrap: wrap; /* Allows bins to wrap to the next line if they exceed container width */
-    gap: 15px; /* Spacing between each bin item */
+    flex-wrap: wrap;
+    gap: 15px;
 }
 
 .bin-item {
-    width: 120px; /* Set a fixed width for each bin item */
+    width: 150px; /* Fixed width */
+    height: 180px; /* Fixed height */
+    position: relative;
     text-align: center;
     border: 1px solid #ddd;
     padding: 10px;
     border-radius: 8px;
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+/* Delete icon button styling */
+.delete-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: none;
+    border: none;
+    color: #002904;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.delete-btn i {
+    font-size: 18px;
+}
+
+img {
+    height: 80px;
+    width: 80px;
+    margin-top: 20px;
+}
+
+/* Delete Confirmation Modal Styling */
+#deleteConfirmModal {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    width: 100%;
+    max-width: 400px;
+    animation: slideDown 0.3s ease;
+}
+
+#deleteConfirmModal .modal-content {
+    padding: 20px;
+    text-align: center;
+}
+
+#deleteConfirmModal h2 {
+    font-size: 18px;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+/* Modal Buttons */
+.modal-buttons {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+.cancel-btn, .delete-confirm-btn {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.cancel-btn {
+    background-color: #ddd;
+    color: #333;
+}
+
+.cancel-btn:hover {
+    background-color: #bbb;
+}
+
+.delete-confirm-btn {
+    background-color: #ff4d4d;
+    color: white;
+}
+
+.delete-confirm-btn:hover {
+    background-color: #d43f3f;
 }
 
     </style>
@@ -421,7 +498,7 @@ img{
             </div>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="#"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
+                    <li><a href="../Users/dashboard.html"><i class="fas fa-tachometer-alt"></i> <span>Dashboard</span></a></li>
                     <li><a href="#"><i class="fas fa-bell"></i> <span>Notifications</span></a></li>
                     <li><a href="#"><i class="fas fa-user"></i> <span>Profile</span></a></li>
                     <li><a href="bottlebins.html"><i class="fas fa-trash-alt"></i> <span>Bottle Bin</span></a></li>
@@ -467,7 +544,20 @@ img{
 <!-- Display Bins -->
 <div id="binContainer" class="bin-container">
     <!-- Bin icons with details will appear here -->
+
 </div>
+
+<!-- Delete Confirmation Modal -->
+<div id="deleteConfirmModal" class="modal">
+    <div class="modal-content">
+        <h2>Are you sure you want to delete this bin?</h2>
+        <div class="modal-buttons">
+            <button id="cancelDelete" class="cancel-btn">Cancel</button>
+            <button id="confirmDelete" class="delete-confirm-btn">Delete</button>
+        </div>
+    </div>
+</div>
+
                 
             </section>
 
@@ -519,26 +609,64 @@ document.getElementById('addBinForm').onsubmit = function (event) {
     .catch(error => console.error('Error:', error));
 };
 
-// Load bins on page load
-document.addEventListener('DOMContentLoaded', loadBins);
+ // Function to load bins
+ function loadBins() {
+            fetch('../bins/get_bins.php')
+                .then(response => response.json())
+                .then(data => {
+                    const binContainer = document.getElementById('binContainer');
+                    binContainer.innerHTML = '';
+                    data.forEach(bin => {
+                        const binElement = document.createElement('div');
+                        binElement.classList.add('bin-item');
+                        binElement.innerHTML = `
+                            <button class="delete-btn" onclick="deleteBin('${bin.bin_code}')">
+                                <i class="fas fa-times"></i>
+                            </button>
+                            <img src="../drawable/trashbinlogo.png" alt="Bin Icon">
+                            <p>Code: ${bin.bin_code}</p>
+                            <p>Address: ${bin.bin_address}</p>
+                        `;
+                        binContainer.appendChild(binElement);
+                    });
+                })
+                .catch(error => console.error('Error:', error));
+        }
 
-function loadBins() {
-    fetch('../bins/get_bins.php')  // Updated path to include the bins folder
-        .then(response => response.json())
+
+
+let binToDelete = null; // Variable to store the bin code for deletion
+
+// Function to open the delete confirmation modal
+function deleteBin(binCode) {
+    binToDelete = binCode;
+    document.getElementById('deleteConfirmModal').style.display = 'block';
+}
+
+// Cancel delete action and close modal
+document.getElementById('cancelDelete').onclick = function() {
+    document.getElementById('deleteConfirmModal').style.display = 'none';
+    binToDelete = null;
+};
+
+// Confirm delete action and close modal
+document.getElementById('confirmDelete').onclick = function() {
+    if (binToDelete) {
+        fetch(`../bins/delete_bin.php?binCode=${binToDelete}`, {
+            method: 'GET'
+        })
+        .then(response => response.text())
         .then(data => {
-            const binContainer = document.getElementById('binContainer');
-            binContainer.innerHTML = '';
-            data.forEach(bin => {
-                const binElement = document.createElement('div');
-                binElement.classList.add('bin-item');
-                binElement.innerHTML = `<img src="../drawable/trashbinlogo.png" alt="Bin Icon" style=”float: right>
-                                        <p>Code: ${bin.bin_code}</p>
-                                        <p>Address: ${bin.bin_address}</p>`;
-                binContainer.appendChild(binElement);
-            });
+            console.log(data);  // Display success message or error
+            document.getElementById('deleteConfirmModal').style.display = 'none';
+            loadBins();  // Reload bins after deletion
         })
         .catch(error => console.error('Error:', error));
-}
+        binToDelete = null;
+    }
+};
+
+
 // JavaScript to handle modal and form submission
 document.getElementById('addBinBtn').onclick = function () {
     document.getElementById('addBinModal').style.display = 'block';
