--- a/Users/dashboard.html
+++ b/Users/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" type="x-icon" href="drawable/logo.png">
+    <link rel="shortcut icon" type="x-icon" href="../drawable/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link rel="stylesheet" href="../css/dashboard.css">
@@ -13,7 +13,6 @@
     <!-- FullCalendar CSS and JS -->
     <link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.4/main.min.css' rel='stylesheet' />
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.4/main.min.js'></script>
-
     <style>
         /* Global Styles */
         * {
@@ -26,10 +25,10 @@
             font-family: 'Arial', sans-serif;
             display: flex;
             height: 100vh;
-            background-image: url('../drawable/webbackground.jpg'); /* Set the background image */
-            background-size: cover; /* Cover the entire background */
-            background-position: center; /* Center the background image */
-            background-repeat: no-repeat; /* Prevent repeating of the background image */
+            background-image: url('../drawable/webbackground.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             color: #333;
         }
 
@@ -41,17 +40,18 @@
         /* Sidebar Styling */
         .sidebar {
             width: 250px;
-            background-color: rgba(0, 0, 0, 0.5); /* Slightly transparent for a subtle effect */
+            background-color: rgba(0, 0, 0, 0.5);
             color: white;
             padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            transition: width 0.3s ease; /* Smooth transition */
+            transition: width 0.3s ease;
         }
 
         .sidebar.collapsed {
-            width: 60px; /* Collapsed width to show only icons */
+            width: 60px;
+            overflow: hidden;
         }
 
         .logo-container {
@@ -63,21 +63,30 @@
         }
 
         .logo {
-            width: 40px; /* Adjusted for visibility when collapsed */
+            width: 40px;
             height: auto;
-            margin-right: 0; /* Center logo in collapsed view */
+        }
+
+        /* Toggle Button Styling */
+        .toggle-btn {
+            background: transparent;
+            border: none;
+            color: white;
+            font-size: 24px;
+            cursor: pointer;
+            margin-bottom: 20px;
         }
 
         /* Hide text when sidebar is collapsed */
         .brand-info h1,
         .nav-links a span {
-            display: inline; /* Show by default */
+            display: inline;
             transition: opacity 0.3s ease;
         }
 
         .sidebar.collapsed .brand-info h1,
         .sidebar.collapsed .nav-links a span {
-            display: none; /* Hide when collapsed */
+            display: none;
         }
 
         /* Navigation Links */
@@ -108,8 +117,8 @@
         }
 
         .nav-links a:hover {
-            background-color: rgba(0, 128, 0, 0.3); /* Transparent green on hover */
-            color: white; /* White text on hover */
+            background-color: rgba(0, 128, 0, 0.3);
+            color: white;
         }
 
         .sidebar.collapsed .nav-links a {
@@ -118,7 +127,9 @@
         }
 
         .sidebar.collapsed .nav-links a i {
-            margin-right: 0; /* Center icons in collapsed state */
+            margin-right: 0;
+            display: block;
+            text-align: center;
         }
 
         /* Main Content Styling */
@@ -133,15 +144,15 @@
 
         /* Widget Styling with Glassmorphism */
         .widget {
-            background: rgba(255, 255, 255, 0.2); /* Semi-transparent white background */
-            backdrop-filter: blur(10px); /* Background blur */
-            border-radius: 15px; /* Rounded corners */
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); /* Shadow for depth */
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px);
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             padding: 20px;
             flex: 1 1 300px;
             max-width: 100%;
             min-width: 250px;
-            border: 1px solid rgba(255, 255, 255, 0.5); /* Optional: border for effect */
+            border: 1px solid rgba(255, 255, 255, 0.5);
         }
 
         .widget h4, .widget h2 {
@@ -158,7 +169,7 @@
         .time-widget h3 {
             font-size: 36px;
             color: #005709;
-            animation: pulse 1.5s infinite; /* Adding pulse animation */
+            animation: pulse 1.5s infinite;
         }
 
         .weather {
@@ -172,7 +183,7 @@
             margin-bottom: 10px;
             width: 50px;
             height: 50px;
-            animation: bounce 1s infinite; /* Adding bounce animation */
+            animation: bounce 1s infinite;
         }
 
         #temperature {
@@ -188,8 +199,8 @@
         }
 
         .bottle-count-widget .bottle-box {
-            background-color: rgba(255, 255, 255, 0.2); /* Semi-transparent for glass effect */
-            backdrop-filter: blur(10px); /* Blur for glass effect */
+            background-color: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(10px);
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -204,7 +215,7 @@
         }
 
         .notification-widget .notification {
-            background-color: rgba(255, 235, 204, 0.9); /* Light semi-transparent background */
+            background-color: rgba(255, 235, 204, 0.9);
             padding: 15px;
             border-radius: 8px;
             margin-top: 10px;
@@ -243,35 +254,27 @@
 
         /* Animations */
         @keyframes pulse {
-            0% {
-                transform: scale(1);
-            }
-            50% {
-                transform: scale(1.05);
-            }
-            100% {
-                transform: scale(1);
-            }
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
         }
 
         @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-                transform: translateY(0);
-            }
-            40% {
-                transform: translateY(-10px);
-            }
-            60% {
-                transform: translateY(-5px);
-            }
+            0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+            40% { transform: translateY(-10px); }
+            60% { transform: translateY(-5px); }
         }
     </style>
 </head>
-<body class="bod">
+<body>
 
     <div class="dashboard">
         <!-- Sidebar -->
         <aside class="sidebar collapsed">
+            <button class="toggle-btn" onclick="toggleSidebar()">
+                <i class="fas fa-bars"></i>
+                
+            </button>
             <div class="logo-container">
                 <img src="../drawable/logo.png" alt="Bottle Cycle Logo" class="logo">
             </div>
@@ -282,7 +285,7 @@
                     <li><a href="#"><i class="fas fa-user"></i> <span>Profile</span></a></li>
                     <li><a href="bottlebins.html"><i class="fas fa-trash-alt"></i> <span>Bottle Bin</span></a></li>
                     <li><a href="reports.html"><i class="fas fa-file-alt"></i> <span>Reports</span></a></li>
-                    <li><a href="logout.php"><i class="fas fa-sign-out-alt"></i> <span>Logout</span></a></li>
+                    <li><a href="../Public/index.html"><i class="fas fa-sign-out-alt"></i> <span>Logout</span></a></li>
                 </ul>
             </nav>
         </aside>
@@ -295,7 +298,7 @@
                 <div class="time">
                     <h3 id="current-time">Loading...</h3>
                     <p id="day-of-week">Loading...</p>
-                    <p id="location">Location: Loading...</p> <!-- Added Location -->
+                    <p id="location">Location: Loading...</p>
                 </div>
                 <div class="weather">
                     <img id="weather-icon" src="" alt="Weather Icon" style="display: none;">
@@ -306,7 +309,6 @@
 
             <!-- Bottles Collected Widget -->
             <section class="widget bottle-count-widget">
-                
                 <div class="bottle-size">
                     <h4>Bottles Collected</h4>
                     <div class="bottle-box">
@@ -356,11 +358,15 @@
         </main>
     </div>
 
-    <!-- JavaScript for Sidebar Hover Effect and Time/Weather -->
+    <!-- JavaScript for Sidebar Toggle and Other Functions -->
     <script>
-        const sidebar = document.querySelector('.sidebar');
+        function toggleSidebar() {
+            const sidebar = document.querySelector('.sidebar');
+            sidebar.classList.toggle('collapsed');
+        }
 
         // Expand sidebar on hover
+        const sidebar = document.querySelector('.sidebar');
         sidebar.addEventListener('mouseenter', () => {
             sidebar.classList.remove('collapsed');
         });
@@ -436,6 +442,24 @@
 
         getLocationAndFetchWeather(); // Get user's location and fetch weather
         setInterval(getLocationAndFetchWeather, 600000); // Update weather every 10 minutes
+
+        // Function to fetch bottle counts and update the widget
+function fetchBottleCounts() {
+    fetch('../Sensors/get_bottle_count.php') // Adjust to your PHP file path
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('small-bottle-count').textContent = data.small || '0';
+            document.getElementById('medium-bottle-count').textContent = data.medium || '0';
+            document.getElementById('large-bottle-count').textContent = data.large || '0';
+        })
+        .catch(error => console.error('Error fetching bottle counts:', error));
+}
+
+// Call fetchBottleCounts initially
+fetchBottleCounts();
+
+// Set interval to update every 5 seconds (5000 ms)
+setInterval(fetchBottleCounts, 5000);
     </script>
 </body>
 </html>
